--- a/package.json
+++ b/package.json
@@ -1,55 +1,45 @@
 {
   "name": "bz-jsonp",
-  "version": "1.0.0",
-  "description": "用jsonp请求数据，只适用于GET",
-  "author": ";",
-  "main": "src/index.js",
+  "version": "2.0.0",
+  "description": "通过jsonp获取数据",
+  "author": "xc <xiechun@bozhong.com>",
+  "main": "dist/bz-jsonp.umd.js",
+  "module": "dist/bz-jsonp.esm.js",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "address": "^1.0.3",
+    "fs": "0.0.1-security",
+    "npm-run-all": "^4.1.5",
+    "path": "^0.12.7",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^4.2.1",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-watch": "^4.3.1",
+    "shelljs": "^0.8.3"
+  },
+  "scripts": {
+    "dev": "rollup -c build/rollup.config.dev.js --watch",
+    "build": "rollup -c build/rollup.config.prod.js",
+    "build:moe": "rollup -c build/rollup.config.moe.js",
+    "demo": "node build/demo.config.js",
+    "build:all": "npm-run-all build build:moe demo"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BozhongFE/bz-jsonp.git"
   },
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "test": "mocha test/*.spec.js --compilers js:babel-core/register --reporter spec",
-    "build": "npm run build-prod && npm run build-prod-min && npm run build-doc",
-    "build-prod": "webpack --config build/webpack.prod.conf.js",
-    "build-prod-min": "webpack --config build/webpack.prod.conf.js --min",
-    "build-doc": "webpack --config build/webpack.doc.conf.js"
+  "keywords": [
+    "jsonp"
+  ],
+  "license": "",
+  "bugs": {
+    "url": "https://github.com/BozhongFE/bz-jsonp/issues"
   },
-  "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.11.6",
-    "chai": "^3.5.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "express": "^4.14.0",
-    "highlight.js": "^8.9.1",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.24.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "markdown-loader": "^0.1.7",
-    "mocha": "^3.2.0",
-    "postcss-loader": "^0.13.0",
-    "style-loader": "^0.13.1",
-    "vue-hot-reload-api": "^2.0.6",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^9.7.0",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
-  },
-  "dependencies": {
-    "github-markdown-css": "^2.4.1",
-    "js-yaml": "^3.6.1",
-    "vue": "^2.0.3",
-    "vue-router": "^2.0.1",
-    "vuex": "^2.0.0"
-  }
+  "homepage": "https://github.com/BozhongFE/bz-jsonp#readme"
 }
